--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -9,6 +9,8 @@
   color: #fff;
 
   margin-top: auto;
+  height: 70px;
+  width: 100%;
 }
 
 .footer-link-items > h2 {
